--- a/patient-service/src/main/resources/templates/pacjentAll.html
+++ b/patient-service/src/main/resources/templates/pacjentAll.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<html>
 <head>
     <meta charset="UTF-8">
     <link href = "/css/styles.css" rel = "stylesheet"/>
-    <title>Moja aplikacja</title>
+    <title>Moja przychodnia</title>
 </head>
 <body>
 <h4>Wszyscy pacjenci</h4>
@@ -13,6 +12,7 @@
         <td data-th-text="${x.firstName}">...</td>
         <td data-th-text="${x.lastName}">...</td>
         <td data-th-text="${x.pesel}">...</td>
+        <td data-th-text="${x.nrUbezpieczenia}">...</td>
     </tr>
 </table>
 </body>
